--- a/res/layout/list_item_song.xml
+++ b/res/layout/list_item_song.xml
@@ -1,18 +1,23 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/item_song_linear_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="horizontal">
 
     <ImageView android:id="@+id/item_song_image_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/play"/>
+        android:src="@drawable/play"
+        android:padding="4dp"/>
 
     <TextView android:id="@+id/item_song_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:textSize="16sp"
-        android:layout_marginBottom="8dp" />
+        android:paddingBottom="14dp"
+        android:paddingTop="14dp"
+        android:paddingRight="48dp"
+        android:text="@string/song_title_kogda_tvoy"/>
 
 </LinearLayout>
