--- a/res/layout/fragment_song_details.xml
+++ b/res/layout/fragment_song_details.xml
@@ -13,9 +13,9 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <LinearLayout
+    <LinearLayout android:id="@+id/fragment_song_details_title_linear_layout"
         android:layout_marginTop="8dp"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
@@ -29,9 +29,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="20sp"
-            android:padding="12dp"
-            android:layout_marginBottom="24dp"
-            android:text="@string/song_title_kogda_tvoy"/>
+            android:padding="20dp"
+            android:layout_marginBottom="0dp"
+            android:text="@string/song_title_kontrast"/>
 
     </LinearLayout>
 
