--- a/res/menu/menu_song_list_fragment.xml
+++ b/res/menu/menu_song_list_fragment.xml
@@ -10,4 +10,8 @@
         android:title="@string/text_random_on"
         app:showAsAction="never"/>
 
+    <item android:id="@+id/:menu_item_repeat"
+        android:title="@string/text_repeat_off"
+        app:showAsAction="never"/>
+
 </menu>
